--- a/src/merge/inputurl.ui
+++ b/src/merge/inputurl.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Enter URL</string>
+   <string>URL Gir</string>
   </property>
   <widget class="QPushButton" name="okBtn">
    <property name="geometry">
@@ -35,7 +35,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>OK</string>
+    <string>Tamam</string>
    </property>
   </widget>
   <widget class="QPushButton" name="cancelBtn">
@@ -48,7 +48,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Cancel</string>
+    <string>İptal</string>
    </property>
   </widget>
   <widget class="QPushButton" name="closeBtn">
@@ -74,7 +74,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Enter URL</string>
+    <string>URL Gir</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
