--- a/src/merge/preferencesdialog.ui
+++ b/src/merge/preferencesdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Milis Video - Preferences</string>
+   <string>Milis Video - Tercihler</string>
   </property>
   <widget class="QWidget" name="title_widget" native="true">
    <property name="geometry">
@@ -32,7 +32,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Preference</string>
+     <string>Tercih</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -106,7 +106,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Cancel</string>
+    <string>İptal</string>
    </property>
   </widget>
   <widget class="QPushButton" name="applyButton">
@@ -119,7 +119,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Apply</string>
+    <string>Uygula</string>
    </property>
   </widget>
   <widget class="QPushButton" name="okButton">
@@ -132,7 +132,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>OK</string>
+    <string>Tamam</string>
    </property>
   </widget>
  </widget>
